--- a/VehicleInspectionInsuranceWeb/src/index.css
+++ b/VehicleInspectionInsuranceWeb/src/index.css
@@ -3,6 +3,24 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;700&family=Poppins:wght@400;500;600;700&display=swap');
 
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+
+
+
 html {
   scroll-behavior: smooth;
 }
@@ -38,7 +56,7 @@ html {
 
 a {
   font-weight: 500;
-  color: #f9d71c;
+  color: #0092b1;
   text-decoration: inherit;
 }
 a:hover {
